--- a/index.html
+++ b/index.html
@@ -246,48 +246,62 @@
                 </div>
                 <h2 class="plan__title-third">Trusted by Thousands of <br> Happy Customer</h2>
                 <p class="plan__title-description">These are the stories of our customers who have joined us with great <br> pleasure when using this crazy feature.</p>
-                
-                <div class="plan__slider">
+            </div>    
+
+            <div class="slider">
+                <div class="slider__plan">
                     <div class="plan__slider-content">
-                        <div class="plan__slider-card">
+                        <div class="plan__slider-card--red">
                             <div class="plan__card-content">
-                                <img src="img/foto1.svg" alt="foto">
-                                <div class="plan__card-name">
-                                    <h3 class="plan__name-text">Viezh Robert</h3>
-                                    <p class="plan__country-text">Warsaw, Poland</p>
+                                <div class="plan__card-content--top-left">
+                                    <img src="img/foto1.svg" alt="foto">
+                                    <div class="plan__card-name">
+                                        <h3 class="plan__name-text">Viezh Robert</h3>
+                                        <p class="plan__country-text">Warsaw, Poland</p>
+                                    </div>
                                 </div>
-                                <p class="plan__mark">4.5</p>
-                                <img class="plan__img-star" src="img/star.svg" alt="star">
+                                <div class="plan__card-content--top-right">
+                                    <p class="plan__mark">4.5</p>
+                                    <img class="plan__img-star" src="img/star.svg" alt="star">
+                                </div>
                             </div>
                             <div class="plan__card-comment">
                                 <p class="plan__comment-text">“Wow... I am very happy to use this VPN, it <br> turned out to be more than my expectations <br> and so far there have been no problems. <br> LaslesVPN always the best”.</p>
                             </div>
                         </div>
 
-                        <div class="plan__slider-card">
+                        <div class="plan__slider-card--white">
                             <div class="plan__card-content">
-                                <img src="img/foto2.svg" alt="foto">
-                                <div class="plan__card-name">
-                                    <h3 class="plan__name-text">Yessica Christy</h3>
-                                    <p class="plan__country-text">Shanxi, China</p>
+                                <div class="plan__card-content--top-left">
+                                    <img src="img/foto2.svg" alt="foto">
+                                    <div class="plan__card-name">
+                                        <h3 class="plan__name-text">Yessica Christy</h3>
+                                        <p class="plan__country-text">Shanxi, China</p>
+                                    </div>
                                 </div>
-                                <p class="plan__mark">4.5</p>
-                                <img class="plan__img-star" src="img/star.svg" alt="star">
+                                <div class="plan__card-content--top-right">
+                                    <p class="plan__mark">4.5</p>
+                                    <img class="plan__img-star" src="img/star.svg" alt="star">
+                                </div>
                             </div>
                             <div class="plan__card-comment">
                                 <p class="plan__comment-text">“I like it because I like to travel far and still can <br> connect with high speed.”.</p>
                             </div>
                         </div>
                         
-                        <div class="plan__slider-card">
+                        <div class="plan__slider-card--white">
                             <div class="plan__card-content">
-                                <img src="img/foto3.svg" alt="foto">
-                                <div class="plan__card-name">
-                                    <h3 class="plan__name-text">Kim Young Jou</h3>
-                                    <p class="plan__country-text">Seoul, South Korea</p>
+                                <div class="plan__card-content--top-left">
+                                    <img src="img/foto3.svg" alt="foto">
+                                    <div class="plan__card-name">
+                                        <h3 class="plan__name-text">Kim Young Jou</h3>
+                                        <p class="plan__country-text">Seoul, South Korea</p>
+                                    </div>
                                 </div>
+                                <div class="plan__card-content--top-right">
                                 <p class="plan__mark">4.5</p>
                                 <img class="plan__img-star" src="img/star.svg" alt="star">
+                                </div>
                             </div>
                             <div class="plan__card-comment">
                                 <p class="plan__comment-text">“This is very unusual for my business that <br> currently requires a virtual private network <br> that has high security.”.</p>
@@ -314,19 +328,21 @@
                 </div>
 
                 <div class="plan__subscribe">
-                    <div class="plan__subscribe-text">
-                        <h2 class="plan__subsctibe-title">Subscribe Now for <br> Get Special Features!</h2>
-                        <p class="plan__subscribe-description">Let's subscribe with us and find the fun.</p>
-                    </div>
-                    <button class="intro__button">
+                    <div class="plan__subscribe-block">
+                        <div class="plan__subscribe-text">
+                            <h2 class="plan__subsctibe-title">Subscribe Now for <br> Get Special Features!</h2>
+                            <p class="plan__subscribe-description">Let's subscribe with us and find the fun.</p>
+                        </div>
+                        <button class="intro__button">
                             <span class="intro__button-text">Subscribe now</span>
-                    </button>
-                </div>
-            </div>    
+                        </button>
+                    </div>
+                </div>       
+            </div>             
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="footer__logo">
             <a class="footer__link" href="#">
                 <img class="footer__image" src="img/Logo.svg" alt="logo">
@@ -348,31 +364,31 @@
         <div class="footer__list">
             <div class="footer__list-product">
                 <nav class="footer__nav">
-                    <a href="#" class="header-link"><strong>Product</strong></a>
-                    <a href="#" class="header-link">Download</a>
-                    <a href="#" class="header-link">Pricing</a>
-                    <a href="#" class="header-link">Locations</a>
-                    <a href="#" class="header-link">Server</a>
-                    <a href="#" class="header-link">Countries</a>
-                    <a href="#" class="header-link">Blog</a>
+                    <a href="#" class="header__link--title"><strong>Product</strong></a>
+                    <a href="#" class="header__link">Download</a>
+                    <a href="#" class="header__link">Pricing</a>
+                    <a href="#" class="header__link">Locations</a>
+                    <a href="#" class="header__link">Server</a>
+                    <a href="#" class="header__link">Countries</a>
+                    <a href="#" class="header__link">Blog</a>
                 </nav>
             </div>
             <div class="footer__list-engage">
                 <nav class="footer__nav">
-                    <a href="#" class="header-link"><strong>Engage</strong></a>
-                    <a href="#" class="header-link">LaslesVPN</a>
-                    <a href="#" class="header-link">FAQ</a>
-                    <a href="#" class="header-link">Tutorials</a>
-                    <a href="#" class="header-link">About Us</a>
-                    <a href="#" class="header-link">Privacy Policy</a>
-                    <a href="#" class="header-link">Terms of Service</a>
+                    <a href="#" class="header__link--title"><strong>Engage</strong></a>
+                    <a href="#" class="header__link">LaslesVPN</a>
+                    <a href="#" class="header__link">FAQ</a>
+                    <a href="#" class="header__link">Tutorials</a>
+                    <a href="#" class="header__link">About Us</a>
+                    <a href="#" class="header__link">Privacy Policy</a>
+                    <a href="#" class="header__link">Terms of Service</a>
                 </nav>
             </div>
             <div class="footer__ist-money">
                 <nav class="footer__nav">
-                    <a href="#" class="header-link"><strong>Earn Money</strong></a>
-                    <a href="#" class="header-link">Affiliate</a>
-                    <a href="#" class="header-link">Become Partner</a>
+                    <a href="#" class="header__link--title"><strong>Earn Money</strong></a>
+                    <a href="#" class="header__link">Affiliate</a>
+                    <a href="#" class="header__link">Become Partner</a>
                 </nav>
                 </div>
         </div>
