--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
                 </ul>              
             </nav>
             <div class="header__buttons">
-                <button class="header__button--signin">
-                    <span class="header__button--signin-text">Sign In</span>
-                </button>
-                <button class="header__button--oval-white">
-                    <span class="header__button--oval-white-text">Sign Up</span>
-                </button>
+                <button class="button__signin">Sign In</button>
+                <button class="button__oval--white">Sign Up</button>
             </div>
         </div>
     </header>
@@ -44,9 +40,7 @@
                 <div class="intro__getstarted">
                     <h1 class="intro__title">Want anything to be easy <br> with <strong>LaslesVPN.</strong></h1>
                     <p class="intro__text--description">Provide a network for all your needs with ease and fun using <strong>LaslesVPN</strong><br>discover interesting features from us.</p>
-                    <button class="intro__main-button--rectangle">
-                        <span class="intro__main-button--rectangle-text">Get Started</span>
-                    </button>
+                    <button class="button__rectangle">Get Started</button>
                 </div>
                 <div class="intro__image">
                     <img src="img/Illustration1.png" alt="work">
@@ -152,9 +146,7 @@
                         </div>
                         <div class="plan__price-block">
                             <span class="plan__price">Free</span>
-                            <button class="plan__button--white">
-                                <span class="plan__button--white-text">Select</span>
-                            </button>
+                            <button class="button__oval--white-large">Select</button>
                         </div>
                     </div>
 
@@ -187,9 +179,7 @@
                         </div>
                         <div class="plan__price-block">
                             <span class="plan__price"><b>$9</b>  / mo</span>
-                            <button class="plan__button--white">
-                                <span class="plan__button--white-text">Select</span>
-                            </button>
+                            <button class="button__oval--white-large">Select</button>
                         </div>    
                     </div>
 
@@ -226,9 +216,7 @@
                         </div>    
                         <div class="plan__price-block">
                             <span class="plan__price"><b>$12</b>  / mo</span>
-                            <button class="plan__button--white">
-                                <span class="plan__button--red-text">Select</span>
-                            </button>
+                            <button class="button__oval--white-large">Select</button>
                         </div>   
                     </div>
                 </div>
@@ -318,11 +306,13 @@
                         </div>
                         <div class="plan__slider-buttons-type">
                             <div class="plan__button-nonact">
-                                <img src="img/nonact-button.svg" alt="button">
+                                <a href="#"></a>
                             </div>
+
                             <div class="plan__button-act">
-                                <img src="img/button-act.svg" alt="button">
+                                <a href="#"></a>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -333,9 +323,7 @@
                             <h2 class="plan__subsctibe-title">Subscribe Now for <br> Get Special Features!</h2>
                             <p class="plan__subscribe-description">Let's subscribe with us and find the fun.</p>
                         </div>
-                        <button class="intro__button">
-                            <span class="intro__button-text">Subscribe now</span>
-                        </button>
+                        <button class="button__rectangle">Subscribe now</button>
                     </div>
                 </div>       
             </div>             
