--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p class="intro__paragraph">You can explore the features that we provide with fun and <br> have their own functions each feature.</p>
                     
                     <div class="intro__text-flex">
-                        <img src="img/bx_bxs-check-circle.svg" alt="checkbox">
+
                         <p class="intro__text-bullet">Powerfull online protection.</p>
                     </div>
                     <div class="intro__text-flex">
@@ -348,7 +348,9 @@
             <p class="footer__logo-subtitle"> <strong>LaslesVPN </strong>  is a private virtual network that <br> has unique features and has high security.</p>
             <div class="footer__icons">
                 <div class="footer__facebook">
-                    <img src="img/Facebook.svg" alt="facebook">
+                    <svg class="icon">
+                        <use xlink:href="img/_sprite.svg#Facebook"></use>
+                    </svg>
                 </div>
                 <div class="footer__twitter">
                     <img src="img/Twitter.svg" alt="facebook">
