--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <section class="intro">
             <div class="intro__main">
                 <div class="intro__getstarted">
-                    <h1 class="intro__title">Want anything to be easy <br> with <strong>LaslesVPN.</strong></h1>
-                    <p class="intro__text_description">Provide a network for all your needs with ease and fun using <strong>LaslesVPN</strong><br>discover interesting features from us.</p>
+                    <h1 class="intro__title">Want anything to be easy with <strong>LaslesVPN.</strong></h1>
+                    <p class="intro__text_description">Provide a network for all your needs with ease and fun using <strong>LaslesVPN</strong> discover interesting features from us.</p>
                     <div class="button">
                         <button class="button__rectangle">Get Started</button>
                     </div>                    
@@ -63,7 +63,6 @@
                 <div class="intro__summary-wrapper">
                     <div class="intro__summary-flex">
                         <div class="intro__content">
-                            <!-- <img src="img/user.svg" alt="users"> -->
                             <svg class="user">
                                 <use xlink:href="img/_sprite.svg#user"></use>
                               </svg>
@@ -231,7 +230,8 @@
                 <p class="plan__title-description">See <strong>LaslesVPN</strong> everywhere to make it easier for you when you move <br> locations.</p>
                 <picture class="map">
                     <source srcset="img/HugeGlobal-smaller.png" media="(max-width: 768px)">
-                    <source srcset="img/HugeGlobal-smaller.png" media="(max-width: 1024px)">    
+                    <source srcset="img/HugeGlobal-smaller.png" media="(max-width: 1024px)">
+                    <source srcset="img/HugeGlobal-medium.png" media="(max-width: 1300px)">
                     <img src="img/HugeGlobal.png" alt="work">
                 </picture>
                 <div class="plan__companies">
