--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
             </div>
 
             <nav class="header__navigation">
-                <ul class="header__navigation-ul">
-                    <li><a href="#" class="header__link">About</a></li>
-                    <li><a href="#" class="header__link">Features</a></li>
-                    <li><a href="#" class="header__link">Pricing</a></li>
-                    <li><a href="#" class="header__link">Testimonials</a></li>
-                    <li><a href="#" class="header__link">Help</a></li>
-                </ul>
+                <div class="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                        <span></span>
+                    </label>
+                    <ul class="header__navigation-ul">
+                        <li><a href="#" class="header__link">About</a></li>
+                        <li><a href="#" class="header__link">Features</a></li>
+                        <li><a href="#" class="header__link">Pricing</a></li>
+                        <li><a href="#" class="header__link">Testimonials</a></li>
+                        <li><a href="#" class="header__link">Help</a></li>
+                    </ul>
+                </div>
             </nav>
             <div class="header__buttons">
                 <button class="button button__oval_white">Sign In</button>
@@ -240,10 +246,8 @@
                     <source srcset="img/HugeGlobal-smaller.png" media="(max-width: 767px)">
                     <source srcset="img/HugeGlobal-smaller.png" media="(max-width: 1024px)">
                     <source srcset="img/HugeGlobal-medium.png" media="(max-width: 1300px)">
-                    <source type="img/png" media="(max-width: 767px)"
-                        srcset="img/HugeGlobal_1х.png 1х, img/HugeGlobal_2х.png 2х">
-                    <img class="map" src="img/HugeGlobal_1х.png 1x" srcset="img/HugeGlobal_2х.png 2х" alt="work"
-                        height="537" width="1060">
+                    <!-- <source type="img/png" media="(max-width: 767px)" srcset="img/HugeGlobal_1х.png 1х", srcset="img/HugeGlobal_2х.png 2х"> -->
+                    <img class="map" src="img/HugeGlobal_1х.png" src="img/HugeGlobal_2х.png" alt="work" height="537" width="1060">
                 </picture>
                 <div class="plan__companies">
                     <img src="img/Netflix.png" alt="Netflix">
